--- a/adminPanel/index.html
+++ b/adminPanel/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image" href="./src/assets/Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Panel - Libaas | Buy Men, Women & kids Clothes Online in Pakistan</title>
 
